--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -1,4 +1,4 @@
-name: Android CI
+name: linux CI
 
 on:
   push:
@@ -21,7 +21,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '17'
-        distribution: 'temurin'
+        distribution: 'terminal'
 
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
@@ -40,8 +40,8 @@ jobs:
       run: |
         tools/install-rust-dependencies
 
-    - name: Install Android Dependencies
-      run: tools/install-android-dependencies
+    - name: Install linux Dependencies
+      run: tools/install-linux-dependencies
 
     - name: Cache internal dependencies
       id: internal_cache
@@ -66,7 +66,7 @@ jobs:
         ./gradlew assembleAndroidTest
         popd
 
-    - name: Run tests
+    - name: Run 
       uses: reactivecircus/android-emulator-runner@v2
       with:
         api-level: 30
@@ -74,10 +74,10 @@ jobs:
         arch: x86
         ndk: 23.1.7779620
         cmake: 3.18.1
-        script: cd android; ./gradlew connectedAndroidTest
+        script: cd linux; ./gradlew connectedAndroidTest
 
-    - name: Build sample app
-      run: tools/samples-build android
+    - name: Build app
+      run: tools/tru-build android
       env:
         GITHUB_USER: ${{ github.actor }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
